@@ -49,7 +49,7 @@ GTK_REQUIRED=2.10.0
 GCONF_REQUIRED=1.2.0
 LIBGLADE_REQUIRED=2.0.0
 TELEPATHY_REQUIRED=0.0.51
-MISSION_CONTROL_REQUIRED=4.27
+MISSION_CONTROL_REQUIRED=4.33
 
 IDT_COMPILE_WARNINGS
 
